// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`empty single rule 1`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [],
    "properties": [],
    "selectors": [
      ".banana",
    ],
  },
]
`;

exports[`media query 1`] = `
[
  {
    "$nodeType": "at",
    "body": [
      {
        "$nodeType": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$nodeType": "property",
            "name": "color",
            "value": "green",
          },
        ],
        "selectors": [
          ".banana",
        ],
      },
    ],
    "parameters": "screen and (max-width: 992px)",
    "type": "media",
  },
]
`;

exports[`nested media query 1`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [
      {
        "$nodeType": "at",
        "body": [
          {
            "$nodeType": "rule",
            "nestedRules": [],
            "properties": [],
            "selectors": [
              ".banana",
            ],
          },
        ],
        "parameters": "screen and (max-width: 992px)",
        "type": "media",
      },
    ],
    "properties": [],
    "selectors": [
      "div",
    ],
  },
]
`;

exports[`single rule with no property and nested rule with one property 1`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [
      {
        "$nodeType": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$nodeType": "property",
            "name": "color",
            "value": "green",
          },
        ],
        "selectors": [
          ".nested",
        ],
      },
    ],
    "properties": [],
    "selectors": [
      ".banana",
    ],
  },
]
`;

exports[`single rule with one property 1`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$nodeType": "property",
        "name": "color",
        "value": "red",
      },
    ],
    "selectors": [
      ".banana",
    ],
  },
]
`;

exports[`single rule with one property and nested rule 1`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [
      {
        "$nodeType": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$nodeType": "property",
            "name": "color",
            "value": "green",
          },
        ],
        "selectors": [
          ".nested",
        ],
      },
    ],
    "properties": [
      {
        "$nodeType": "property",
        "name": "color",
        "value": "red",
      },
    ],
    "selectors": [
      ".banana",
    ],
  },
]
`;
